# wasure

./: .gitignore  README.md  package.json  pyproject.toml
docs/: comprehensive-benchmarks.md  index.html  test-zoo.js  wasure-results.csv  zoo-core.js  zoo.js  zoo.node.js
scripts/: score_runtime.py
wasure/benchmarks/polybench-standalone/: 2mm.wasm  3mm.wasm  adi.wasm  atax.wasm  bicg.wasm  cholesky.wasm  correlation.wasm  covariance.wasm  deriche.wasm  doitgen.wasm  durbin.wasm  fdtd-2d.wasm  floyd-warshall.wasm  gemm.wasm  gemver.wasm  gesummv.wasm  gramschmidt.wasm  heat-3d.wasm  jacobi-1d.wasm  jacobi-2d.wasm  lu.wasm  ludcmp.wasm  mvt.wasm  nussinov.wasm  seidel-2d.wasm  symm.wasm  syr2k.wasm  syrk.wasm  trisolv.wasm  trmm.wasm
wasure/installers/: bun-jsc.json  node-v8.json  spidermonkey.json  wasmi.json  wizard.json
wasure/installers/bun/: run.js
wasure/installers/v8/: run.mjs
wasure/tools/: export.py
